Enhance system configuration and processing capabilities
- Added new environment variables for OCR and Telegram settings in `.env.example`.
- Introduced `PayslipProcessingService` for improved payslip processing with enhanced extraction and validation.
- Implemented `TelegramUser` and `TelegramUserAnalytics` models for better user management and analytics tracking.
- Updated `TelegramBotService` to support advanced features and user interactions.
- Created new migration files for Telegram user and analytics tables.
- Enhanced batch processing and notification systems with new settings and improved error handling.
- Updated API routes to include new endpoints for analytics and bulk actions.
- Improved frontend components for batch uploading and history viewing with enhanced user experience.

--- a/.env.example
+++ b/.env.example
@@ -74,3 +74,37 @@ WHATSAPP_ACCESS_TOKEN=
 WHATSAPP_PHONE_NUMBER_ID=
 WHATSAPP_WEBHOOK_VERIFY_TOKEN=
 WHATSAPP_WEBHOOK_URL=
+
+# OCR Configuration
+OCR_METHOD=ocrspace
+OCRSPACE_API_KEY=
+PDFTOTEXT_PATH=/usr/bin/pdftotext
+
+# System Configuration
+PHP_BINARY_PATH=/usr/bin/php
+QUEUE_WORKER_TIMEOUT=300
+QUEUE_WORKER_MEMORY=512
+QUEUE_WORKER_SLEEP=3
+QUEUE_WORKER_TRIES=3
+TELEGRAM_BOT_TIMEOUT=600
+TELEGRAM_BOT_MEMORY=256
+
+# Telegram Admin Settings
+TELEGRAM_ADMIN_IDS=
+TELEGRAM_ADMIN_CHAT_ID=
+
+# Telegram Webhook Settings
+TELEGRAM_WEBHOOK_RATE_LIMIT=true
+TELEGRAM_WEBHOOK_RATE_LIMIT_MAX=100
+TELEGRAM_WEBHOOK_RATE_LIMIT_WINDOW=60
+TELEGRAM_DEBUG_WEBHOOK=false
+
+# Telegram Polling Settings
+TELEGRAM_POLLING_TIMEOUT=1
+TELEGRAM_POLLING_INTERVAL=100000
+TELEGRAM_UPDATE_LIMIT=100
+TELEGRAM_MAX_CONSECUTIVE_ERRORS=5
+
+# Telegram User Settings
+TELEGRAM_RATE_LIMIT=10
+TELEGRAM_RATE_WINDOW=60
