Update Telegram bot configuration and introduce management script
- Updated `.env.example` with new Telegram bot settings, including token, timeout, memory, max restarts, and restart delay.
- Added `telegram-bot-manager.sh` script for managing the Telegram bot with commands for start, stop, restart, status, and logs.
- Enhanced `telegram-bot-simple.php` to support running as a daemon and improved logging and error handling for continuous polling.

--- a/.env.example
+++ b/.env.example
@@ -65,7 +65,7 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 # Telegram Bot Configuration
-TELEGRAM_BOT_TOKEN=
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 TELEGRAM_WEBHOOK_URL=
 TELEGRAM_WEBHOOK_SECRET=
 
@@ -81,13 +81,15 @@ OCRSPACE_API_KEY=
 PDFTOTEXT_PATH=/usr/bin/pdftotext
 
 # System Configuration
-PHP_BINARY_PATH=/usr/bin/php
+PHP_BINARY_PATH=/opt/plesk/php/8.3/bin/php
 QUEUE_WORKER_TIMEOUT=300
 QUEUE_WORKER_MEMORY=512
 QUEUE_WORKER_SLEEP=3
 QUEUE_WORKER_TRIES=3
-TELEGRAM_BOT_TIMEOUT=600
+TELEGRAM_BOT_TIMEOUT=300
 TELEGRAM_BOT_MEMORY=256
+TELEGRAM_BOT_MAX_RESTARTS=50
+TELEGRAM_BOT_RESTART_DELAY=5
 
 # Telegram Admin Settings
 TELEGRAM_ADMIN_IDS=
