--- a/.env.example
+++ b/.env.example
@@ -68,6 +68,7 @@ VITE_APP_NAME="${APP_NAME}"
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 TELEGRAM_WEBHOOK_URL=
 TELEGRAM_WEBHOOK_SECRET=
+TELEGRAM_USE_SIMPLE_BOT=true
 
 # WhatsApp Bot Configuration
 WHATSAPP_ACCESS_TOKEN=
